# qt_trash_progress

./: CMakeLists.txt  README.md  counter.cpp  counter.h  lcd.h  main.cpp  progress.cpp  progress.h  res.qrc
